# BMI203-final-nn

./: Rap1-nn.ipynb  mnist-nn.ipynb  pyproject.toml
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
