[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Angelica Lam", email = "angelica.lam@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "matplotlib", "scikit-learn"
]

[project.urls]
Home = "https://github.com/angelicalam/BMI203-final-nn.git"
